--- a/index.html
+++ b/index.html
@@ -9,5 +9,17 @@
 </head>
 <body>
     
+    <form>
+        <div>
+            <input type="text">
+        </div>
+        <div>
+            <input type="password">
+        </div>
+        <div>
+            <button type="submit">Register</button>
+        </div>
+    </form>
+    
 </body>
 </html>
